# ACP

./: .gitignore  README.md  foundry.toml  package.json  pnpm-lock.yaml  remappings.txt
configs/facilitator/: partners.json
configs/policy/: acp-launch-model.json  acp-scenarios.json  scenarios.json
docs/: internal-protocol-audit-2026-04-26.md  internal-red-team-audit-2026-04-26.md  narrative-audit.md  policy-sheet.md  protocol-todos.md  raydium-buyback-adapter.md  rewrite-spec.md  solana-credit-machine.md
script/: HookDeployer.sol  deployLocal.mjs  exportAbis.mjs  simulatePolicy.mjs  simulate_acp.py
service/facilitator/: index.ts  lib.test.ts  lib.ts
skills/agc-agent-protocol/: SKILL.md
solana/: Anchor.toml  Cargo.toml  README.md  tsconfig.json
solana/programs/agc_solana/: Cargo.toml
solana/programs/agc_solana/src/: lib.rs
solana/tests/: agc_solana.ts
src/: AGCHook.sol  AGCToken.sol  PolicyController.sol  PolicyEngine.sol  RewardDistributor.sol  SettlementRouter.sol  StabilityVault.sol  XAGCVault.sol
src/interfaces/: IAGCHook.sol  IRewardDistributor.sol  ISettlementRouter.sol  IStabilityVault.sol  IXAGCVault.sol
src/libraries/: AGCDataTypes.sol  PoolCurrencySettlement.sol
src/mocks/: MockUSDC.sol
test/agchook/: AGCHook.t.sol
test/mocks/: MockHookAdapter.sol  MockPolicyEngine.sol  MockPoolManager.sol  MockRewardDistributor.sol  MockSettlementRouter.sol  MockVault.sol
test/policy/: PolicyController.t.sol  PolicyControllerZeroSupply.t.sol  PolicyEngine.t.sol
web/: .env.example  index.html  tsconfig.json  vite.config.ts
web/public/: llms.txt  (+1 more)
(+14 files in other folders)
