[package]
name = "agc_solana"
version = "0.1.0"
description = "Solana implementation of Agent Credit Protocol core policy and vault mechanics"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "agc_solana"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.1", features = ["init-if-needed"] }
anchor-spl = "1.0.1"
